src/objects/Timesheet_Export_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>AWR_Days__c</fullName>
        <label>AWR Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AWR_days_from_CR__c</fullName>
        <description>AWR days pulled from Closing Report. this field was using the free tyope Holiday entitlement field rather than the formula Holiday entitlement field.</description>
        <formula>Closing_Report__r.Annual_Leave_Entitlement__c</formula>
        <inlineHelpText>Formula field for AWR days pulled from Closing Report. This populates the Timesheet Export Report</inlineHelpText>
        <label>Old AWR days from CR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Timesheet Export Line Items</relationshipLabel>
        <relationshipName>Timesheet_Export_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle_Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bundle Work</label>
        <referenceTo>Bundle_Work__c</referenceTo>
        <relationshipLabel>Timesheet Export Line Items</relationshipLabel>
        <relationshipName>Timesheet_Export_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCS__c</fullName>
        <formula>TEXT(Closing_Report__r.CCS__c)</formula>
        <label>CCS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Rate_1__c</fullName>
        <label>Charge Rate 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Rate_2__c</fullName>
        <label>Charge Rate 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Rate_3__c</fullName>
        <label>Charge Rate 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_account_number__c</fullName>
        <label>Client account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Timesheet Export Line Items</relationshipLabel>
        <relationshipName>Timesheet_Export_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheet_Export_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Timesheet Export Line Items</relationshipLabel>
        <relationshipName>Timesheet_Export_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_AWR_Days_From_CR__c</fullName>
        <description>This pulls from the Holiday Entitlement Formula field on the Closing Report</description>
        <formula>Closing_Report__r.Annual_Leave_Entitlement_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AWR days from CR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_name__c</fullName>
        <label>Office name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_number__c</fullName>
        <label>PO number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Rate_1__c</fullName>
        <label>Pay Rate 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Rate_2__c</fullName>
        <label>Pay Rate 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Rate_3__c</fullName>
        <label>Pay Rate 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Type_1__c</fullName>
        <label>Pay Type 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Type_2__c</fullName>
        <label>Pay Type 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Type_3__c</fullName>
        <label>Pay Type 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_Week_Ending__c</fullName>
        <label>Pay Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payroll_number__c</fullName>
        <label>Payroll number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Timesheet_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Timesheet_Export_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timesheet_Export__c</fullName>
        <label>Timesheet Export</label>
        <referenceTo>Timesheet_Export__c</referenceTo>
        <relationshipLabel>Timesheet Export Line Items</relationshipLabel>
        <relationshipName>Timesheet_Export_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Timesheet_Week_New__c</fullName>
        <formula>Timesheet__r.Timesheet_Week_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timesheet Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_Week__c</fullName>
        <label>Timesheet Week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipLabel>Timesheet Export Line Items</relationshipLabel>
        <relationshipName>Timesheet_Export_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unit_1__c</fullName>
        <label>Unit 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_2__c</fullName>
        <label>Unit 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_3__c</fullName>
        <label>Unit 3</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Description__c</fullName>
        <label>Work Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Timesheet Export Line Item</label>
    <nameField>
        <displayFormat>TELI-{YYYY}{MM}-{0}</displayFormat>
        <label>Timesheet Export Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Export Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>